fix too stretched image

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,8 +16,8 @@ code {
 
 img.home-carousel {
     max-width: 100%;
-    max-height: 100%;
-    margin: 0px;    
+    max-height: 100%;    
+    object-fit: contain;
 }
 
 .doc-img {
